[package]
name = "cantrip-timerli-manager"
version = "0.1.0"
description = "Cantrip OS timer service"
edition = "2021"

[features]
default = []


[dependencies]
cantrip-os-common = { path = "../../cantrip-os-common" }
cantrip-timerli-interface = { path = "../cantrip-timerli-interface" }
log = { version = "0.4", features = ["release_max_level_info"] }
smallvec = "1.10"
spin = "0.9"


